Removed String.Blank() method